--- a/ChessProgram/ChessBoardTest/ChessBoardControl.xaml
+++ b/ChessProgram/ChessBoardTest/ChessBoardControl.xaml
@@ -10,6 +10,11 @@
         <SolidColorBrush x:Key="BlackCellBrush" Color="#FF1A5C7F" />
         <SolidColorBrush x:Key="WhiteCellBrush" Color="#FF3980A6" />
         <local:BoardDimensionConverter x:Key="BoardDimConverter" />
+        <ResourceDictionary x:Key="Dictionaries">
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/ChessFiguresDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
     <Grid x:Name="ChessBoardGrid" HorizontalAlignment="Stretch" 
           VerticalAlignment="Stretch">
@@ -24,98 +29,86 @@
             <ColumnDefinition Width="10" />
         </Grid.ColumnDefinitions>
         <Grid x:Name="wrapperGrid" Grid.Row="1" Grid.Column="1" Background="#ff065E8C">
-            <Canvas x:Name="mainCanvas" Height="{Binding ElementName=mainCanvas, Path=Width}"
-                HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <Canvas.Width>
+            <UniformGrid x:Name="chessBoardGrid" Rows="8" Columns="8" Height="{Binding Width, ElementName=chessBoardGrid}">
+                <UniformGrid.Width>
                     <MultiBinding Converter="{StaticResource BoardDimConverter}">
                         <Binding Mode="OneWay" ElementName="wrapperGrid" Path="ActualWidth" />
                         <Binding Mode="OneWay" ElementName="wrapperGrid" Path="ActualHeight" />
                     </MultiBinding>
-                </Canvas.Width>
-
-                <Canvas.Background>
-                    <VisualBrush>
-                        <VisualBrush.Visual>
-                            <UniformGrid Rows="8" Columns="8" 
-                                     Width="{Binding ElementName=mainCanvas, Path=Width}" 
-                                     Height="{Binding ElementName=mainCanvas, Path=Height}">
-                                <!-- Row 1 -->
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <!-- Row 2 -->
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <!-- Row 3 -->
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <!-- Row 4 -->
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <!-- Row 5 -->
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <!-- Row 6 -->
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <!-- Row 7 -->
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <!-- Row 8 -->
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                                <Border Background="{StaticResource BlackCellBrush}" />
-                                <Border Background="{StaticResource WhiteCellBrush}" />
-                            </UniformGrid>
-                        </VisualBrush.Visual>
-                    </VisualBrush>
-                </Canvas.Background>
-            </Canvas>
+                </UniformGrid.Width>
+                <!-- Row 1 -->
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <!-- Row 2 -->
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <!-- Row 3 -->
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <!-- Row 4 -->
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <!-- Row 5 -->
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <!-- Row 6 -->
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <!-- Row 7 -->
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <!-- Row 8 -->
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+                <Border Background="{StaticResource BlackCellBrush}" />
+                <Border Background="{StaticResource WhiteCellBrush}" />
+            </UniformGrid>
         </Grid>
         
     </Grid>
