Implemented animation and basic figures movement features. Fixed small issue in moves provider with lastMove.

--- a/ChessProgram/ChessBoardTest/ChessBoardControl.xaml
+++ b/ChessProgram/ChessBoardTest/ChessBoardControl.xaml
@@ -36,78 +36,7 @@
                         <Binding Mode="OneWay" ElementName="wrapperGrid" Path="ActualHeight" />
                     </MultiBinding>
                 </UniformGrid.Width>
-                <!-- Row 1 -->
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <!-- Row 2 -->
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <!-- Row 3 -->
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <!-- Row 4 -->
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <!-- Row 5 -->
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <!-- Row 6 -->
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <!-- Row 7 -->
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <!-- Row 8 -->
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
-                <Border Background="{StaticResource BlackCellBrush}" />
-                <Border Background="{StaticResource WhiteCellBrush}" />
+                <!-- Placeholder for borders -->
             </UniformGrid>
         </Grid>
         
