Fixed some erratums in MoveProvider. Fixed ZIndex issue in movement animation.   Added events to ChessBoard control and changed a bit logic with inner moves provider.

--- a/ChessProgram/ChessBoardTest/MainWindow.xaml
+++ b/ChessProgram/ChessBoardTest/MainWindow.xaml
@@ -15,6 +15,7 @@
             <ColumnDefinition Width="20" />
         </Grid.ColumnDefinitions>
         
-        <local:ChessBoardControl Grid.Row="1" Grid.Column="1" />
+        <local:ChessBoardControl x:Name="chessBoardControl" 
+                                 Grid.Row="1" Grid.Column="1" />
     </Grid>
 </Window>
