--- a/ChessProgram/ChessBoardTest/MainWindow.xaml
+++ b/ChessProgram/ChessBoardTest/MainWindow.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ChessBoardTest"
-        Title="MainWindow" Height="640" Width="640">
+        Title="MainWindow" Height="620" Width="640" 
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="20" />
