Added dirty and quick game saving, just for testing. Find bug with killedFigures data structure

--- a/ChessProgram/ChessBoardTest/MainWindow.xaml
+++ b/ChessProgram/ChessBoardTest/MainWindow.xaml
@@ -23,6 +23,12 @@
             <Button x:Name="redoButton" Width="50" Content="Redo"
                     Click="redoButton_Click" Margin="5" 
                     IsEnabled="False" />
+            <Button x:Name="saveButton" Width="50" Content="Save"
+                    Click="saveButton_Click" Margin="5" 
+                    IsEnabled="True" />
+            <Button x:Name="readButton" Width="50" Content="Read"
+                    Click="readButton_Click" Margin="5" 
+                    IsEnabled="True" />
         </StackPanel>
         <local:ChessBoardControl x:Name="chessBoardControl" 
                                  Grid.Row="2" Grid.Column="1" />
