--- a/ChessProgram/ChessBoardLib/View/ChessBoardControl.xaml
+++ b/ChessProgram/ChessBoardLib/View/ChessBoardControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:Controls="clr-namespace:ChessBoardVisualLib.Controls"
              mc:Ignorable="d" >
     <UserControl.Resources>
         <ResourceDictionary>
@@ -13,21 +14,21 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <Grid x:Name="wrapperGrid"
-              Background="#ff065E8C"
-              HorizontalAlignment="Stretch"
-              Height="{Binding ActualWidth, RelativeSource={RelativeSource Self}}">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="10" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="10" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="10" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="10" />
-            </Grid.ColumnDefinitions>
-            <Button Content="Click" Grid.Row="1" Grid.Column="1" />
-        </Grid>
+        <Controls:SquareContainer Background="Red">
+            <Grid x:Name="wrapperGrid" 
+              Background="#ff065E8C">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="10" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="10" />
+                </Grid.ColumnDefinitions>
+                <Button Content="Click" Grid.Row="1" Grid.Column="1"/>
+            </Grid>
+        </Controls:SquareContainer>
     </Grid>
 </UserControl>
