--- a/ChessProgram/ChessBoardLib/Resources/ChessBoardDictionary.xaml
+++ b/ChessProgram/ChessBoardLib/Resources/ChessBoardDictionary.xaml
@@ -1,5 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Converters="clr-namespace:ChessBoardVisualLib.Converters">
     <SolidColorBrush x:Key="BlackCellBrush" Color="#FF1A5C7F" />
     <SolidColorBrush x:Key="WhiteCellBrush" Color="#FF3980A6" />
+    
+    <Converters:DictionaryValueConverter x:Key="figureConverter">
+        
+    </Converters:DictionaryValueConverter>
 </ResourceDictionary>
