--- a/ChessProgram/ChessBoardLib/Resources/ChessBoardDictionary.xaml
+++ b/ChessProgram/ChessBoardLib/Resources/ChessBoardDictionary.xaml
@@ -1,10 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Converters="clr-namespace:ChessBoardVisualLib.Converters">
+                    xmlns:Converters="clr-namespace:ChessBoardVisualLib.Converters"
+                    xmlns:QueemCore="clr-namespace:Queem.Core;assembly=Queem.Core">
     <SolidColorBrush x:Key="BlackCellBrush" Color="#FF1A5C7F" />
     <SolidColorBrush x:Key="WhiteCellBrush" Color="#FF3980A6" />
     
-    <Converters:DictionaryValueConverter x:Key="figureConverter">
-        
+    <Converters:DictionaryValueConverter x:Key="colorToBackgroundConverter">
+        <Converters:DictionaryValueConverter.Values>
+            <SolidColorBrush x:Key="{x:Static QueemCore:Color.White}" Color="#ff3980a6" />
+            <SolidColorBrush x:Key="{x:Static QueemCore:Color.Black}" Color="#ff1a5c7f" />
+        </Converters:DictionaryValueConverter.Values>
     </Converters:DictionaryValueConverter>
 </ResourceDictionary>
