--- a/ChessProgram/ChessBoardVisualTest/MainWindow.xaml
+++ b/ChessProgram/ChessBoardVisualTest/MainWindow.xaml
@@ -5,6 +5,6 @@
         Title="MainWindow" Height="350" Width="525"
         WindowStartupLocation="CenterScreen">
     <Grid>
-        <local:ChessBoardControl />
+        <local:ChessBoardControl x:Name="chessBoardControl" />
     </Grid>
 </Window>
