Fixed memory releasing on highlighted cells. First step to animation

--- a/ChessProgram/ChessBoardLib/Resources/ChessBoardDictionary.xaml
+++ b/ChessProgram/ChessBoardLib/Resources/ChessBoardDictionary.xaml
@@ -10,23 +10,9 @@
     <SolidColorBrush x:Key="WhiteBrush" Color="White" />
 
     <Converters:DummyConverter x:Key="dummyConverter" />
-    
-    <Style x:Key="figureGridStyle" TargetType="{x:Type Grid}">
-        <Style.Triggers>
-            <!--<MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    
-                    <Condition Binding="{Binding Path=IsMouseOver, Converter={StaticResource dummyConverter}}" Value="True" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Opacity" Value="0.7" />
-            </MultiDataTrigger>-->
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="Red" />
-            </Trigger>
-        </Style.Triggers>
-    </Style>
-    
-    
+
+    <Converters:MoveToDeltaYConverter x:Key="moveToDeltaYConverter" />
+    <Converters:MoveToDeltaXConverter x:Key="moveToDeltaXConverter" />
     <Converters:FigureToGridLengthConverter x:Key="figureToGridLengthConverter" />
 
     <Converters:DictionaryValueConverter x:Key="colorToBackgroundConverter">
